# XpressiveGroovebox

./: CMakeLists.txt  README.md  automation.cpp  automation.h  effect.cpp  effect.h  instrument.cpp  instrument.h  main.cpp  mainwindow.cpp  mainwindow.h  pianoroll.cpp  pianoroll.h  projectio.cpp  projectio.h  synthengine.cpp  synthengine.h  testfile.mmp  xpressive_parser.cpp  xpressive_parser.h
.github/workflows/: android-build.yml
android/: AndroidManifest.xml
